--- a/deployment.yaml
+++ b/deployment.yaml
@@ -21,4 +21,4 @@ spec:
             - name: OLLAMA_URL
               value: "http://ollama-service:11434"
             - name: OLLAMA_MODEL
-              value: "llama2:latest"
+              value: "qwen2.5-coder:3b"
